--- a/flutter_first/pubspec.yaml
+++ b/flutter_first/pubspec.yaml
@@ -40,6 +40,7 @@ flutter:
   assets:
    - assets/XcodeElon.jpg
    - assets/cache.jpg
+   - assets/Xcode-Elon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
