--- a/flutter_first/pubspec.yaml
+++ b/flutter_first/pubspec.yaml
@@ -39,7 +39,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/XcodeElon.jpg
-   - assets/cache.jpg
+   - assets/CYLLogo.jpg
+   - assets/CYLLogo-209.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
